--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -3,6 +3,10 @@
   <%= f.text_field :name %>
 </p>
 <p>
+  <%= f.label :info %>
+  <%= f.text_field :info %>
+</p>
+<p>
   <%= f.label :help %>
   <%= fckeditor_textarea "question", "help", :height => "200px" %>
 </p>
