--- a/app/views/questionnaire/step5.html.erb
+++ b/app/views/questionnaire/step5.html.erb
@@ -1,33 +1,33 @@
-<h1>Provisional Patent Questionnaire &raquo; Step 4</h1>
+<h1>Provisional Patent Questionnaire &raquo; Step 5</h1>
 <div class="content_cms">
   <%= @page.body rescue "" %>
 </div>
 <div id="questionnaire">
   <%= error_messages_for @object.class.to_s.underscore.to_sym %>
-  <% form_tag("step-4", :url => questionnaire_step4_path, :class => "validate", :method => :post ) do %>
+  <% form_tag("step-5", :url => questionnaire_step5_path, :class => "validate", :method => :post ) do %>
     <%= hidden_field :order, :order_id, :value => @order.id %>
 	<%= hidden_field :order, :save_and_exit, :value => "" %>
 	
-	<%= label_tag "main_label", "<strong>6. Methods and Steps:</strong>" %>
+	<%= label_tag "main_label", "<strong>8. Alternatives and Variations:</strong>" %>
 	<div id="field_set">
-	  <%= label :answer7, :body, "#{@question7.name} <small>#{@question7.info}</small>" %>
-	  <%= text_area :answer7, :body, :class => "required" %>
+	  <%= label :answer8, :body, "#{@question8.name} <small>#{@question8.info}</small>" %>
+	  <%= text_area :answer8, :body, :class => "required" %>
 	</div>
 	<%= image_tag "bt/info_tab.jpg", :alt => "More Information", :class => "more_info" %>
 	<div class="info_text">
-	  <%= @question7.help %>
+	  <%= @question8.help %>
 	</div>
 	
     <div id="actions">
 	  <div id="progress_bar">
-	    <div style="width:<%= progress_bar(6.to_i)%>%;">&nbsp;</div>
-	    <p>PROGRESS BAR (<%= progress_bar(6.to_i)%>%)</p>
+	    <div style="width:<%= progress_bar(7.to_i)%>%;">&nbsp;</div>
+	    <p>PROGRESS BAR (<%= progress_bar(7.to_i)%>%)</p>
 	    <%= image_tag "bg/progress_bar_left_mask.png", :class => "left" %>
 	    <%= image_tag "bg/progress_bar_right_mask.png", :class => "right" %>
 	  </div>
 	  <div id="buttons">
-	  <% if @question7.first?  %>
-	    <%= link_to "Back", questionnaire_step3_path, :class => "back replacement" %>
+	  <% if @question8.first?  %>
+	    <%= link_to "Back", questionnaire_step4_path, :class => "back replacement" %>
 	    <%= submit_tag "Exit & Save", :id => "exit_button", :class => "saveexit replacement" %>
 	  <% end %>
 	    <%= submit_tag "Save & Continue", :class => "submit replacement" %>
