--- a/app/views/questionnaire/step2.html.erb
+++ b/app/views/questionnaire/step2.html.erb
@@ -15,15 +15,21 @@
 	<%= radio_button :answer3, :body, "No", :class => "required" %>
 	<%= label :answer3, :body_no, "No", :class => "inline" %>
 	
+	<div class="break">&nbsp;</div>
+	
 	<%= image_tag "bt/info_tab.jpg", :alt => "More Information", :class => "more_info" %>
 	<div class="info_text">
 	  <%= @question3.help %>
 	</div>
 	
 	<%= label :answer4, :body, "<strong>B.</strong> #{@question4.name} <small>#{@question4.info}</small>" %>
-
+	
+	<% @inventors.each do |inventor| %>
+		<%= inventor.first_name %>
+	<% end %>
+	
 	<div id="patent_inventors"></div>
-	<div class="bt_add"><%= add_object_link("Add Inventor", Inventor.new, "inventor", "#patent_inventors") %></div>
+	<div class="bt_add"><%= add_object_link(image_tag("bt/add_inventor.jpg", :alt => "Add Inventor"), Inventor.new, "inventor", "#patent_inventors") %></div>
 
 	
 	<%= image_tag "bt/info_tab.jpg", :alt => "More Information", :class => "more_info" %>
@@ -49,4 +55,9 @@
 
   <% end %>
 </div>
-<%= javascript "plugins/metadata", "plugins/validate", "questionnaire/default" %>
+<% content_for :head do -%>
+	<% javascript_tag do -%>
+		var sole = "<%= @answer3.body %>"
+	<%- end -%>
+<% end -%>
+<%= javascript "plugins/metadata", "plugins/validate", "questionnaire/default", "questionnaire/step2" %>
