--- a/app/views/questionnaire/step4.html.erb
+++ b/app/views/questionnaire/step4.html.erb
@@ -8,9 +8,9 @@
     <%= hidden_field :order, :order_id, :value => @order.id %>
 	<%= hidden_field :order, :save_and_exit, :value => "" %>
 	
-	<%= label_tag "main_label", "<strong>6. Methods and Steps:</strong>" %>
+	<%= label_tag "main_label", "<strong>5.</strong> Functionality and Elements of the Inventions" %>
 	<div id="field_set">
-	  <%= label :answer7, :body, "#{@question7.name} <small>#{@question7.info}</small>" %>
+	  <%= label :answer7, :body, "<strong>A.</strong> #{@question7.name} <small>#{@question7.info}</small>" %>
 	  <%= text_area :answer7, :body, :class => "required" %>
 	</div>
 	<%= image_tag "bt/info_tab.jpg", :alt => "More Information", :class => "more_info" %>
@@ -18,10 +18,28 @@
 	  <%= @question7.help %>
 	</div>
 	
+	<div id="field_set">
+	  <%= label :answer8, :body, "<strong>B.</strong> #{@question8.name} <small>#{@question8.info}</small>" %>
+	  <%= text_area :answer8, :body, :class => "required" %>
+	</div>
+	<%= image_tag "bt/info_tab.jpg", :alt => "More Information", :class => "more_info" %>
+	<div class="info_text">
+	  <%= @question8.help %>
+	</div>
+	
+	<div id="field_set">
+	  <%= label :answer9, :body, "<strong>C.</strong> #{@question9.name} <small>#{@question9.info}</small>" %>
+	  <%= text_area :answer9, :body, :class => "required" %>
+	</div>
+	<%= image_tag "bt/info_tab.jpg", :alt => "More Information", :class => "more_info" %>
+	<div class="info_text">
+	  <%= @question9.help %>
+	</div>
+	
     <div id="actions">
 	  <div id="progress_bar">
-	    <div style="width:<%= progress_bar(6.to_i)%>%;">&nbsp;</div>
-	    <p>PROGRESS BAR (<%= progress_bar(6.to_i)%>%)</p>
+	    <div style="width:<%= progress_bar(9.to_i)%>%;">&nbsp;</div>
+	    <p>PROGRESS BAR (<%= progress_bar(9.to_i)%>%)</p>
 	    <%= image_tag "bg/progress_bar_left_mask.png", :class => "left" %>
 	    <%= image_tag "bg/progress_bar_right_mask.png", :class => "right" %>
 	  </div>
