--- a/app/views/questionnaire/terms.html.erb
+++ b/app/views/questionnaire/terms.html.erb
@@ -2,18 +2,70 @@
 <div class="content_cms">
   <%= @page.body %>
 </div>
-<div class="question_answers">
-	<p><strong>1.</strong><%= @question1.name %></p>
-	<div><%= simple_format @answer1.body %></div>
-</div>
-<div class="question_answers">
-	<p><strong>2.</strong><%= @question2.name %></p>
-	<div><%= simple_format @answer2.body %></div>
-</div>
-<div class="question_answers">
-	<p><strong>3.</strong><%= @question3.name %></p>
-	<div><%= simple_format @answer3.body %></div>
-</div>
+<table id='inventors'>
+   	<tr>
+		<td valign="top">
+			<div class="question_answers">
+				<p><strong>1.</strong><%= @question1.name %></p>
+				<div><%= simple_format @answer1.body %></div>
+			</div>
+			<div class="question_answers">
+				<p><strong>2.</strong><%= @question2.name %></p>
+				<div><%= simple_format @answer2.body %></div>
+			</div>
+			<div class="question_answers">
+				<p><strong>3.</strong>Inventorship</p>
+				<p><strong>A.</strong><%= @question3.name %></p>
+				<div><%= simple_format @answer3.body %></div>
+				<p><strong>B.</strong><%= @question4.name %></p>
+				<div>
+					<% @inventors.each do |inventor| %>
+						<dl>
+							<dt>First Name:</dt>
+							<dd><%= inventor.first_name %></dd>
+							<dt>Middle Name:</dt>
+							<dd><%= inventor.middle_name %></dd>
+							<dt>Last Name:</dt>
+							<dd><%= inventor.last_name %></dd>
+							<dt>Citizenship:</dt>
+							<dd><%= inventor.citizenship %></dd>
+							<dt>Stree Address:</dt>
+							<dd><%= inventor.street_address %></dd>
+							<dt>City:</dt>
+							<dd><%= inventor.city %></dd>
+							<dt>State:</dt>
+							<dd><%= inventor.state %></dd>
+							<dt>ZIP Code:</dt>
+							<dd><%= inventor.zipcode %></dd>
+							<dt>Email Address:</dt>
+							<dd><%= inventor.email %></dd>
+						</dl>
+					<% end %>
+				</div>
+			</div>
+			<div class="question_answers">
+				<p><strong>4.</strong>Objectives and Problems Solved by your invention</p>
+				<p><strong>A.</strong><%= @question5.name %></p>
+				<div><%= simple_format @answer5.body %></div>
+				<p><strong>B.</strong><%= @question6.name %></p>
+				<div><%= simple_format @answer6.body %></div>
+			</div>
+		</td>
+		<td valign="top">
+			<div class="question_answers">
+				<p><strong>6.</strong>Methods and Steps</p>
+				<p><strong>A.</strong><%= @question7.name %></p>
+				<div><%= simple_format @answer7.body %></div>
+			</div>
+			<div class="question_answers">
+				<p><strong>6.</strong>Use of the Invention</p>
+				<p><strong>A.</strong><%= @question8.name %></p>
+				<div><%= simple_format @answer8.body %></div>
+			</div>
+		</td>
+	</tr>
+</table>
+
 <div id="questionnaire">
   <%= error_messages_for @object.class.to_s.underscore.to_sym %>
   <% form_for(@terms, :url => questionnaire_terms_path, :live_validations => true, :html => { :method => :post }) do |f| %>
