--- a/app/views/questionnaire/step7.html.erb
+++ b/app/views/questionnaire/step7.html.erb
@@ -1,21 +1,21 @@
-<h1>Provisional Patent Questionnaire &raquo; Step 6</h1>
+<h1>Provisional Patent Questionnaire &raquo; Step 7</h1>
 <div class="content_cms">
   <%= @page.body rescue "" %>
 </div>
 <div id="questionnaire">
   <%= error_messages_for @object.class.to_s.underscore.to_sym %>
-  <% form_tag("step-6", :url => questionnaire_step6_path, :class => "validate", :method => :post ) do %>
+  <% form_tag("step-7", :url => questionnaire_step7_path, :class => "validate", :method => :post ) do %>
     <%= hidden_field :order, :order_id, :value => @order.id %>
 	<%= hidden_field :order, :save_and_exit, :value => "" %>
 	
-	<%= label_tag "main_label", "<strong>7. Use of the Invention</strong>" %>
+	<%= label_tag "main_label", "<strong>8. Alternatives and Variations:</strong>" %>
 	<div id="field_set">
-	  <%= label :answer11, :body, "#{@question11.name} <small>#{@question11.info}</small>" %>
-	  <%= text_area :answer11, :body, :class => "required" %>
+	  <%= label :answer12, :body, "#{@question12.name} <small>#{@question12.info}</small>" %>
+	  <%= text_area :answer12, :body, :class => "required" %>
 	</div>
 	<%= image_tag "bt/info_tab.jpg", :alt => "More Information", :class => "more_info" %>
 	<div class="info_text">
-	  <%= @question11.help %>
+	  <%= @question12.help %>
 	</div>
 	
     <div id="actions">
@@ -26,8 +26,8 @@
 	    <%= image_tag "bg/progress_bar_right_mask.png", :class => "right" %>
 	  </div>
 	  <div id="buttons">
-	  <% if @question11.first?  %>
-	    <%= link_to "Back", questionnaire_step5_path, :class => "back replacement" %>
+	  <% if @question12.first?  %>
+	    <%= link_to "Back", questionnaire_step6_path, :class => "back replacement" %>
 	    <%= submit_tag "Exit & Save", :id => "exit_button", :class => "saveexit replacement" %>
 	  <% end %>
 	    <%= submit_tag "Save & Continue", :class => "submit replacement" %>
