--- a/app/views/questionnaire/terms.html.erb
+++ b/app/views/questionnaire/terms.html.erb
@@ -2,6 +2,8 @@
 <div class="content_cms">
   <%= @page.body %>
 </div>
+<%= error_messages_for @object.class.to_s.underscore.to_sym %>
+<% form_for(@terms, :url => questionnaire_terms_path, :live_validations => true, :html => { :method => :post }) do |f| %>
 <table id='inventors'>
    	<tr>
 		<td valign="top">
@@ -50,45 +52,66 @@
 				<p><strong>B.</strong><%= @question6.name %></p>
 				<div><%= simple_format @answer6.body %></div>
 			</div>
+			<div class="question_answers">
+				<p><strong>5.</strong>Methods and Steps</p>
+				<p><strong>A.</strong><%= @question7.name %></p>
+				<div><%= simple_format @answer7.body %></div>
+				<p><strong>B.</strong><%= @question8.name %></p>
+				<div><%= simple_format @answer8.body %></div>
+				<p><strong>C.</strong><%= @question9.name %></p>
+				<div><%= simple_format @answer9.body %></div>
+			</div>
 		</td>
 		<td valign="top">
 			<div class="question_answers">
-				<p><strong>6.</strong>Methods and Steps</p>
-				<p><strong>A.</strong><%= @question7.name %></p>
-				<div><%= simple_format @answer7.body %></div>
+				<p><strong>6.</strong>Methods or Steps</p>
+				<p><strong>A.</strong><%= @question10.name %></p>
+				<div><%= simple_format @answer10.body %></div>
 			</div>
 			<div class="question_answers">
-				<p><strong>6.</strong>Use of the Invention</p>
-				<p><strong>A.</strong><%= @question8.name %></p>
-				<div><%= simple_format @answer8.body %></div>
+				<p><strong>7.</strong>Use of the Invention</p>
+				<p><strong>A.</strong><%= @question11.name %></p>
+				<div><%= simple_format @answer11.body %></div>
 			</div>
+			<div class="question_answers">
+				<p><strong>8.</strong>Alternatives or Variations</p>
+				<p><strong>A.</strong><%= @question12.name %></p>
+				<div><%= simple_format @answer12.body %></div>
+			</div>
+			<div class="question_answers">
+				<p><strong>9.</strong>Drawings</p>
+				<p><strong>A.</strong><%= @question13.name %></p>
+				<div><%= simple_format @answer13.body rescue "" %></div>
+			</div>
+			<div class="question_answers">
+				<p><strong>10.</strong>Patent Search</p>
+				<p><strong>A.</strong><%= @question14.name %></p>
+				<div><%= simple_format @answer14.body %></div>
+			</div>
+			<h2><%= @terms.name %></h2>
+		    <p id="terms_big">
+		      <%= f.text_area :terms_text, :value => @terms.body, :disable=> true %>
+		    </p>
+		    <p class="checkbox_small">
+		      <%= check_box_tag(:accept, value = "yes") %>
+		      <%= label_tag :accept, "Yes I agree with the Terms above" %>
+		    </p>
 		</td>
 	</tr>
 </table>
-
 <div id="questionnaire">
-  <%= error_messages_for @object.class.to_s.underscore.to_sym %>
-  <% form_for(@terms, :url => questionnaire_terms_path, :live_validations => true, :html => { :method => :post }) do |f| %>
-    <h2><%= @terms.name %></h2>
-    <p id="terms_big">
-      <%= f.text_area :terms_text, :value => @terms.body, :disable=> true %>
-    </p>
-    <p class="checkbox_small">
-      <%= check_box_tag(:accept, value = "yes") %>
-      <%= label_tag :accept, "Yes I agree with the Terms above" %>
-    </p>
     <div id="actions">
       <div id="progress_bar">
-        <div style="width:<%= progress_bar(Question.all.size.to_i)%>%;">&nbsp;</div>
-        <p>PROGRESS BAR (<%= progress_bar(Question.all.size.to_i)%>%)</p>
+        <div style="width:<%= progress_bar(14.to_i)%>%;">&nbsp;</div>
+        <p>PROGRESS BAR (<%= progress_bar(14.to_i)%>%)</p>
         <%= image_tag "bg/progress_bar_left_mask.png", :class => "left" %>
         <%= image_tag "bg/progress_bar_right_mask.png", :class => "right" %>
       </div>
       <div id="buttons">
-        <%= link_to "Back", questionnaire_questions_path("questions", Question.last.position), :class => "back replacement space" %>
+        <%= link_to "Back", questionnaire_step8_path, :class => "back replacement space" %>
         <%= submit_tag "Save & Continue", :class => "submit replacement" %>
       </div>
     </div>
-  <% end %>
 </div>
+<% end %>
 <%= javascript "plugins/metadata", "plugins/validate", "questionnaire/default" %>
