--- a/app/views/admin/configurations/_form.html.erb
+++ b/app/views/admin/configurations/_form.html.erb
@@ -3,20 +3,20 @@
   <%= f.text_field :service_price %>
 </p>
 <p>
-  <%= f.label :service_price, "Patent Search Price" %>
-  <%= f.text_field :service_price %>
+  <%= f.label :patent_search_price, "Patent Search Price" %>
+  <%= f.text_field :patent_search_price %>
 </p>
 <p>
-  <%= f.label :service_price, "Combo Price - Provisional Patent Questionnaire + Patent Search" %>
-  <%= f.text_field :service_price %>
+  <%= f.label :combo_patent_price, "Combo Price - Provisional Patent Questionnaire + Patent Search" %>
+  <%= f.text_field :combo_patent_price %>
 </p>
 <p>
-  <%= f.label :service_price, "Trademark Application Price" %>
-  <%= f.text_field :service_price %>
+  <%= f.label :trademark_application_price, "Trademark Application Price" %>
+  <%= f.text_field :trademark_application_price %>
 </p>
 <p>
-  <%= f.label :service_price, "Trademark Search Price" %>
-  <%= f.text_field :service_price %>
+  <%= f.label :trademark_search_price, "Trademark Search Price" %>
+  <%= f.text_field :trademark_search_price %>
 </p>
 <p>
   <%= f.label :questionnaire_on_hold %>
