--- a/app/views/questionnaire/payment.html.erb
+++ b/app/views/questionnaire/payment.html.erb
@@ -7,8 +7,8 @@
   <%= error_messages_for @object.class.to_s.underscore.to_sym %>
   <div id="actions">
     <div id="progress_bar">
-      <div style="width:<%= progress_bar(Question.all.size+1.to_i)%>%;">&nbsp;</div>
-      <p>PROGRESS BAR (<%= progress_bar(Question.all.size+1.to_i)%>%)</p>
+      <div style="width:<%= progress_bar(14.to_i)%>%;">&nbsp;</div>
+      <p>PROGRESS BAR (<%= progress_bar(14.to_i)%>%)</p>
       <%= image_tag "bg/progress_bar_left_mask.png", :class => "left" %>
       <%= image_tag "bg/progress_bar_right_mask.png", :class => "right" %>
     </div>
