--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -219,6 +219,7 @@ form#my_account {margin:10px 0 0 -40px;float:left;width:400px;}
 
 .question_answers {width:400px;margin:20px;}
 .question_answers div {color:#999;}
+.question_answers dl {margin-bottom:20px;}
 .question_answers dt {float:left;width:90px;color:black;}
 .question_answers p#terms {background:url(../images/bg/input_03.jpg) left 20px no-repeat;height:auto !important;height:70px;min-height:70px;}
 .question_answers textarea {background-color:#EFEFEF;height:55px;width:390px;margin:25px 0 20px 5px;}
@@ -237,8 +238,15 @@ form#my_account {margin:10px 0 0 -40px;float:left;width:400px;}
 
 /*Investors*/
 #inventors {width:100%;margin:10px auto 0 auto;border-bottom:solid 1px #CCC;padding-bottom:10px;}
+.bt_add {padding:20px 0;}
+.bt_add input {float:left;width:20px;}
 .bt_add img {margin:20px 0;}
 #inventors select {width:390px;margin:5px 0 0 5px;}
+#inventors_til_now th {width:120px;text-align:left;}
+#inventors_til_now th,
+#inventors_til_now td {padding:5px;}
+#inventors_til_now tr.odd th,
+#inventors_til_now tr.odd td {background-color:#EAEAEA;}
 
 /*Footer*/
 #footer {clear:both;background:url(../images/bg/footer.png) no-repeat;height:45px;padding:10px 20px 0 20px;font-size:10px;line-height:16px;}
