--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -35,8 +35,8 @@
     <p><%= @trademarks.summary.summary 150 rescue "" %></p>
   </li>
   <li>
-    <a href="#" class="title blog"></a>
-    <h3><%= link_to @blog.name, "#" %></h3>
+    <a href="http://patentlock.blogspot.com/" target="_blank" class="title blog"></a>
+    <h3><%= link_to @blog.name, "http://patentlock.blogspot.com/", :target => "_blank" %></h3>
     <p><%= @blog.summary.summary 150 rescue "" %></p>
   </li>
 </ul>
