--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
           <li class="last"><%= link_to "Terms of Use", page_path("terms-of-use") %></li>
         </ul>
         <p>&copy; Copyright Patent Lock&trade; - <%= link_to 'Professional Website Design', 'http://www.dburnsdesign.com', :target => '_blank' %> by DBurns Design</p>
-        <p>Patent Lock&trade; is a service of the Law Office of Michael N. Cohen, P.C.</p>
+        <p>Patent Lock&trade; is a service of the Cohen IP Law Group, P.C.</p>
       </div>
     </div>
   </body>
